# lensr

./: .env  .env.example  .env.vercel  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  plantodevelop.md  vercel.json  vite.config.ts
.github/workflows/: ci.yml
.lovable/: plan.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml
backend/app/: config.py  llm.py  main.py  observability.py  router_graph.py
backend/app/agents/: __init__.py  _base.py  _pipeline.py  automotive.py  books.py  comparison.py  dating.py  diy.py  events.py  fashion.py  finance.py  fitness.py  food.py  gaming.py  general.py  gift.py  health.py  howto.py  insta.py  jobs.py  learning.py  legal.py  local.py  movies.py  music.py  news.py  parenting.py  pets.py  places.py  price_history.py  productivity.py  real_estate.py  recipes.py  shopping.py  sports.py  tech.py  trip.py  weather.py
backend/app/tools/: cache.py  embeddings.py  scraper.py  serper.py
docs/: ARCHITECTURE.md
src/: routeTree.gen.ts  styles.css
src/components/: CategoryGrid.tsx  ResultsStream.tsx  SearchBar.tsx  SiteHeader.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/components/results/: AgentTimeline.tsx  BooksResult.tsx  DetailDisclosure.tsx  EventsResult.tsx  GeneralResult.tsx  InstaResult.tsx  MoviesResult.tsx  PlacesResult.tsx  PriceHistoryResult.tsx  (+7 more)
src/lib/: api-keys.functions.ts  required-keys.ts
src/routes/: __root.tsx  auth.tsx  index.tsx  insta.tsx  results.tsx  saved.tsx
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260605154735_0f8ad57b-eb66-4c6c-bd47-47c80f383318.sql  20260605154800_d6c0f851-ae98-471b-99d7-24c411883534.sql  20260605163340_159a9b8f-b34a-44b3-9e27-f3ae60c91aa9.sql  20260605165625_fa1ce58e-35e5-4147-aa2e-27794f365b63.sql  20260605171305_90006d91-5537-4cd1-8634-df816e85b652.sql  20260607093645_0c9118db-bb87-41ba-9c46-c08da3975c24.sql  20260627120000_semantic_cache.sql  20260628120000_fix_admin_password.sql
(+12 files in other folders)
