[project]
name = "lensr-backend"
version = "0.1.0"
description = "LangGraph + Bedrock agent backend for Lensr."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-community>=0.3",
  "langchain-aws>=0.2",
  "langgraph>=0.2",
  "boto3>=1.35",
  "httpx>=0.27",
  "trafilatura>=1.12",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N"]
ignore = [
    "E501",   # Line length handled by formatter
    "E402",   # Module-level imports (intentional: logger before imports)
    "B905",   # zip() without strict= (not needed for same-length iterables)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
